# copier-stellars-jupyterhub-ds

./: .gitignore  .gitmodules  README.md  copier.yml  pyproject.toml
.claude/: JOURNAL.md
.github/workflows/: validate-template.yml
docs/: acc-crit-template.md
extra/volumes-migrator/: README.md
template/: .gitignore  README.md.jinja  compose_override.yml.jinja  env.default.jinja  start.sh.jinja  stop.sh.jinja  {% if cifs_shared_mount %}compose_cifs.yml{% endif %}.jinja
template/certs/: README.md.jinja  certs.params.jinja  certs_generate.sh
tests/: conftest.py  test_branding_cleanup.py  test_render.sh  test_template.py
