[project]
name = "copier-stellars-jupyterhub-ds"
version = "2.0.0"
description = "Copier template that scaffolds a thin deployment overlay for stellars-jupyterhub-ds."
authors = [
    { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/stellarshenson/copier-stellars-jupyterhub-ds"
