[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "copier-stellars-jupyterhub-ds"
version = "2.0.1"
description = "Copier template that scaffolds a thin deployment overlay for stellars-jupyterhub-ds."
authors = [
    { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/stellarshenson/copier-stellars-jupyterhub-ds"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "copier>=9",
    "cryptography>=41",
    "pyyaml>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
# Metadata-only project (a copier template, not an importable package). Declaring
# no modules keeps `pip install .[test]` from tripping setuptools auto-discovery.
py-modules = []
